# save-decks

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
app/: db_csv.py  main.py  test_db.py
app/codes_info/: parallel_tcg.py
tests/: test_db.py
tests/codes_info/: test_parallel_tcg.py
