[project]
name = "save-decks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3",
]

[dependency-groups]
build = [
    "pyinstaller>=6.18.0",
]
dev = [
    "pytest>=9.0.2",
]


[pytest]
tmp_path_retention_policy = "failed"